--- a/Posibles Interfaces de Usuario/Buscador.xaml
+++ b/Posibles Interfaces de Usuario/Buscador.xaml
@@ -209,7 +209,7 @@
                                 <ColumnDefinition Width="20*" />
                             </Grid.ColumnDefinitions>
                             <TextBox x:Name="TxtSearch" Grid.Column="0" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" TextChanged="TxtSearch_TextChanged"/>
-                            <Button Grid.Column="1" Content="Buscar" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" />
+                            <Button x:Name="BtnSearch" Grid.Column="1" Content="Buscar" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Click="BtnSearch_Click"/>
                             <CheckBox Grid.Column="2" Content="IgnorarMayusculas" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" VerticalContentAlignment="Center" />
                             <CheckBox Grid.Column="3" Content="Coincidencia Exacta" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" VerticalContentAlignment="Center" />
                         </Grid>
