Name changed, Functionaliy for ExactMatch added and Autosized columns

--- a/Gestion AcademicoAdministrativa Abastos/Buscador.xaml
+++ b/Gestion AcademicoAdministrativa Abastos/Buscador.xaml
@@ -211,7 +211,7 @@
                             <TextBox x:Name="TxtSearch" Grid.Column="0" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" TextChanged="TxtSearch_TextChanged"/>
                             <Button x:Name="BtnSearch" Grid.Column="1" Content="Buscar" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Click="BtnSearch_Click"/>
                             <CheckBox x:Name="IgnoreMayus" Grid.Column="2" Content="IgnorarMayusculas" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" VerticalContentAlignment="Center" />
-                            <CheckBox Grid.Column="3" Content="Coincidencia Exacta" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" VerticalContentAlignment="Center" />
+                            <CheckBox x:Name="ExactMatch" Grid.Column="3" Content="Coincidencia Exacta" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" VerticalContentAlignment="Center" />
                         </Grid>
                         <Label Grid.Row="2" Content="Ordenar" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" FontSize="12" />
                         <Grid Grid.Row="3">
@@ -238,7 +238,7 @@
                         <Grid Grid.Row="5">
                             <Button Content="Tutor"></Button>
                         </Grid>
-                        <DataGrid x:Name="DataGridResult" Grid.Row="6" AutoGenerateColumns="True">
+                        <DataGrid x:Name="DataGridResult" Grid.Row="6" AutoGenerateColumns="True" ColumnWidth="Auto">
                             <!--DataGrid.Columns>
                                 <DataGridTextColumn Header="Nombre" Width="15*" Binding="{Binding Path=Nombre}" />
                                 <DataGridTextColumn Header="Apellidos" Width="25*" Binding="{Binding Path=Apellidos}" />
