--- a/Gestion AcademicoAdministrativa Abastos/App.xaml
+++ b/Gestion AcademicoAdministrativa Abastos/App.xaml
@@ -1,14 +1,20 @@
-﻿<Application x:Class="Posibles_Interfaces_de_Usuario.App"
+﻿<Application x:Class="Gestion_AcademicoAdministrativa_Abastos.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:Posibles_Interfaces_de_Usuario"
+             xmlns:local="clr-namespace:Gestion_AcademicoAdministrativa_Abastos"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
         <Style TargetType="{x:Type DataGridRow}">
             <Setter Property="Foreground" Value="#FFB3B3B3" />
             <Setter Property="Background" Value="#33000000" />
+            <Setter Property="Background" Value="Transparent" />
             <Setter Property="Height" Value="25" />
             <Setter Property="HorizontalContentAlignment" Value="Stretch" />
+            <Style.Triggers>
+                <Trigger Property="IsSelected" Value="True">
+                    <Setter Property="Foreground" Value="Wheat"/>
+                </Trigger>
+            </Style.Triggers>
         </Style>
         <Style TargetType="{x:Type ScrollBar}">
             <Setter Property="BorderBrush" Value="{x:Null}" />
@@ -21,17 +27,30 @@
         <Style TargetType="{x:Type DataGridCell}">
             <Setter Property="BorderBrush" Value="{x:Null}" />
             <Setter Property="Background" Value="#FF262626" />
+            <Style.Triggers>
+                <Trigger Property="IsSelected" Value="True">
+                    <Setter Property="Foreground" Value="Wheat"/>
+                    <Setter Property="FontWeight" Value="Bold" />
+                </Trigger>
+            </Style.Triggers>
+        </Style>
+        <Style TargetType="{x:Type DataGridCellsPresenter}">
+            <Setter Property="BorderBrush" Value="{x:Null}" />
+            <Setter Property="Background" Value="Transparent" />
         </Style>
         <Style TargetType="{x:Type DataGridColumnHeader}">
             <Setter Property="BorderBrush" Value="Wheat" />
+            <Setter Property="BorderBrush" Value="{x:Null}" />
             <Setter Property="Background" Value="#33FFFFFF" />
             <Setter Property="Foreground" Value="#FFFFFFFF" />
         </Style>
         <Style TargetType="{x:Type DataGridRowHeader}">
             <Setter Property="Visibility" Value="Hidden" />
+            <Setter Property="Background" Value="Transparent" />
         </Style>
         <Style TargetType="{x:Type RepeatButton}">
             <Setter Property="Visibility" Value="Hidden" />
+            <Setter Property="Background" Value="Transparent" />
         </Style>
     </Application.Resources>
 </Application>
