--- a/Gestion AcademicoAdministrativa Abastos/MainWindow.xaml
+++ b/Gestion AcademicoAdministrativa Abastos/MainWindow.xaml
@@ -126,7 +126,7 @@
                     <ColumnDefinition Width="33*" />
                     <ColumnDefinition Width="33*" />
                 </Grid.ColumnDefinitions>
-                <Button Grid.Column="0" Content="-" Click="BtnMinimize_Click_1" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" />
+                <Button Grid.Column="0" Content="-" Click="BtnMinimize_Click" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" />
                 <Button Grid.Column="1" Content="□" Click="BtnMaximize_Click" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" />
                 <Button Grid.Column="2" Content="×" Click="BtnCerrar_Click" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" />
             </Grid>
@@ -158,8 +158,8 @@
                         <RowDefinition Height="{Binding Path=HeightRows}" />
                         <RowDefinition Height="5*" />
                     </Grid.RowDefinitions>
-                    <Button x:Name="FirstButton" Grid.Row="0" Content="Buscador Profesorado" Style="{StaticResource MenuButton}" Click="FirstButton_Click"></Button>
-                    <Button Grid.Row="1" Content="Button" Style="{StaticResource MenuButton}"></Button>
+                    <Button x:Name="FirstButton" Grid.Row="0" Content="Buscador Profesorado" Style="{StaticResource MenuButton}" Click="MenuButtons_Click"></Button>
+                    <Button Grid.Row="1" Content="Horario" Style="{StaticResource MenuButton}"></Button>
                     <Button Grid.Row="2" Content="Button" Style="{StaticResource MenuButton}"></Button>
                     <Button Grid.Row="3" Content="Button" Style="{StaticResource MenuButton}"></Button>
                     <Button Grid.Row="4" Content="Button" Style="{StaticResource MenuButton}"></Button>
