--- a/Gestion AcademicoAdministrativa Abastos/MainWindow.xaml
+++ b/Gestion AcademicoAdministrativa Abastos/MainWindow.xaml
@@ -159,10 +159,10 @@
                         <RowDefinition Height="5*" />
                     </Grid.RowDefinitions>
                     <Button x:Name="FirstButton" Grid.Row="0" Content="Buscador Profesorado" Style="{StaticResource MenuButton}" Click="MenuButtons_Click"></Button>
-                    <Button Grid.Row="1" Content="Horario" Style="{StaticResource MenuButton}"></Button>
-                    <Button Grid.Row="2" Content="Button" Style="{StaticResource MenuButton}"></Button>
-                    <Button Grid.Row="3" Content="Button" Style="{StaticResource MenuButton}"></Button>
-                    <Button Grid.Row="4" Content="Button" Style="{StaticResource MenuButton}"></Button>
+                    <Button x:Name="SecondButton" Grid.Row="1" Content="Horario" Style="{StaticResource MenuButton}" Click="MenuButtons_Click"></Button>
+                    <Button Grid.Row="2" Content="Button" Style="{StaticResource MenuButton}" Click="MenuButtons_Click"></Button>
+                    <Button Grid.Row="3" Content="Button" Style="{StaticResource MenuButton}" Click="MenuButtons_Click"></Button>
+                    <Button Grid.Row="4" Content="Button" Style="{StaticResource MenuButton}" Click="MenuButtons_Click"></Button>
                 </Grid>
             </DockPanel>
             <Grid x:Name="MainPanel" Grid.Column="1" Panel.ZIndex="-2">
