--- a/Gestion AcademicoAdministrativa Abastos/Buttons.xaml
+++ b/Gestion AcademicoAdministrativa Abastos/Buttons.xaml
@@ -5,8 +5,44 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Gestion_AcademicoAdministrativa_Abastos"
         mc:Ignorable="d"
-        Title="Buttons" Height="450" Width="800">
+        Title="Buttons" Height="800" Width="250">
     <Grid>
-        
+        <Grid x:Name="MainGridContent" Grid.Column="0" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Background="#FF15171B">
+            <DockPanel x:Name="MenuPanel" HorizontalAlignment="Stretch" LastChildFill="True" VerticalAlignment="Stretch" Panel.ZIndex="1">
+                <DockPanel.Background>
+                    <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
+                        <GradientStop Color="#00000000" Offset="1" />
+                        <GradientStop Color="#0CFFFFFF" />
+                    </LinearGradientBrush>
+                </DockPanel.Background>
+                <Grid HorizontalAlignment="Stretch">
+                    <Grid.Effect>
+                        <DropShadowEffect Direction="-45" BlurRadius="50" RenderingBias="Quality" />
+                    </Grid.Effect>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="100*" />
+                    </Grid.ColumnDefinitions>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="1*" />
+                        <RowDefinition Height="1*" />
+                        <RowDefinition Height="1*" />
+                        <RowDefinition Height="1*" />
+                        <RowDefinition Height="1*" />
+                        <RowDefinition Height="1*" />
+                        <RowDefinition Height="1*" />
+                        <RowDefinition Height="1*" />
+                        <RowDefinition Height="1*" />
+                        <RowDefinition Height="1*" />
+                        <RowDefinition Height="1*" />
+                        <RowDefinition Height="1*" />
+                    </Grid.RowDefinitions>
+                    <Button Grid.Row="0" Content="Home" Style="{StaticResource MenuButton}" Click="MenuButtons_Click"></Button>
+                    <Button x:Name="FirstButton" Grid.Row="1" Content="Buscador Profesorado" Style="{StaticResource MenuButton}" Click="MenuButtons_Click"></Button>
+                    <Button x:Name="SecondButton" Grid.Row="2" Content="Horario" Style="{StaticResource MenuButton}" Click="MenuButtons_Click"></Button>
+                    <Button Grid.Row="3" Content="Button" Style="{StaticResource MenuButton}" Click="MenuButtons_Click"></Button>
+                    <Button Grid.Row="4" Content="Button" Style="{StaticResource MenuButton}" Click="MenuButtons_Click"></Button>
+                </Grid>
+            </DockPanel>
+        </Grid>
     </Grid>
 </Window>
