--- a/Gestion AcademicoAdministrativa Abastos/MainWindow.xaml
+++ b/Gestion AcademicoAdministrativa Abastos/MainWindow.xaml
@@ -131,82 +131,55 @@
                 <Button Grid.Column="2" Content="×" Click="BtnCerrar_Click" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" />
             </Grid>
         </Grid>
-        <Grid x:Name="MainGridContent" Grid.Row="1" Background="#FF15171B" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="20*" />
-                <ColumnDefinition Width="80*" />
-            </Grid.ColumnDefinitions>
-            <DockPanel x:Name="MenuPanel" HorizontalAlignment="Stretch" LastChildFill="True" VerticalAlignment="Stretch" Panel.ZIndex="1">
-                <DockPanel.Background>
-                    <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
-                        <GradientStop Color="#00000000" Offset="1" />
-                        <GradientStop Color="#0CFFFFFF" />
-                    </LinearGradientBrush>
-                </DockPanel.Background>
-                <Grid HorizontalAlignment="Stretch">
-                    <Grid.Effect>
-                        <DropShadowEffect Direction="-45" BlurRadius="50" RenderingBias="Quality" />
-                    </Grid.Effect>
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="100*" />
-                    </Grid.ColumnDefinitions>
-                    <Grid.RowDefinitions>
-                        <RowDefinition Height="{Binding Path=HeightRows}" />
-                        <RowDefinition Height="{Binding Path=HeightRows}" />
-                        <RowDefinition Height="{Binding Path=HeightRows}" />
-                        <RowDefinition Height="{Binding Path=HeightRows}" />
-                        <RowDefinition Height="{Binding Path=HeightRows}" />
-                        <RowDefinition Height="5*" />
-                    </Grid.RowDefinitions>
-                    <Button x:Name="FirstButton" Grid.Row="0" Content="Buscador Profesorado" Style="{StaticResource MenuButton}" Click="MenuButtons_Click"></Button>
-                    <Button x:Name="SecondButton" Grid.Row="1" Content="Horario" Style="{StaticResource MenuButton}" Click="MenuButtons_Click"></Button>
-                    <Button Grid.Row="2" Content="Button" Style="{StaticResource MenuButton}" Click="MenuButtons_Click"></Button>
-                    <Button Grid.Row="3" Content="Button" Style="{StaticResource MenuButton}" Click="MenuButtons_Click"></Button>
-                    <Button Grid.Row="4" Content="Button" Style="{StaticResource MenuButton}" Click="MenuButtons_Click"></Button>
-                </Grid>
-            </DockPanel>
-            <Grid x:Name="MainPanel" Grid.Column="1" Panel.ZIndex="-2">
-                <Grid.Background>
-                    <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
-                        <GradientStop Color="#FF69E655" Offset="0" />
-                        <GradientStop Color="#FF006CC5" Offset="1" />
-                    </LinearGradientBrush>
-                </Grid.Background>
+        <Grid Grid.Row="1" x:Name="WindowContent">
+            <Grid x:Name="MainGridContent" Grid.Row="1" Background="#FF15171B" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
                 <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="5*" />
-                    <ColumnDefinition Width="90*" />
-                    <ColumnDefinition Width="5*" />
+                    <ColumnDefinition Width="20*" />
+                    <ColumnDefinition Width="80*" />
                 </Grid.ColumnDefinitions>
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="5*" />
-                    <RowDefinition Height="90*" />
-                    <RowDefinition Height="5*" />
-                </Grid.RowDefinitions>
-                <Grid HorizontalAlignment="Stretch" Grid.Column="1" Grid.Row="1" Panel.ZIndex="-1">
+                <Grid x:Name="MainPanel" Grid.Column="1" Panel.ZIndex="-2">
                     <Grid.Background>
                         <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
-                            <GradientStop Color="#FFFF3FEE" Offset="0" />
-                            <GradientStop Color="#FFFFB32D" Offset="1" />
+                            <GradientStop Color="#FF69E655" Offset="0" />
+                            <GradientStop Color="#FF006CC5" Offset="1" />
                         </LinearGradientBrush>
                     </Grid.Background>
                     <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="50*" />
-                        <ColumnDefinition Width="50*" />
+                        <ColumnDefinition Width="5*" />
+                        <ColumnDefinition Width="90*" />
+                        <ColumnDefinition Width="5*" />
                     </Grid.ColumnDefinitions>
                     <Grid.RowDefinitions>
-                        <RowDefinition Height="25*" />
-                        <RowDefinition Height="25*" />
-                        <RowDefinition Height="25*" />
-                        <RowDefinition Height="25*" />
+                        <RowDefinition Height="5*" />
+                        <RowDefinition Height="90*" />
+                        <RowDefinition Height="5*" />
                     </Grid.RowDefinitions>
-                    <Button Grid.Row="0" Content="Button"></Button>
-                    <Button Grid.Row="0" Grid.Column="1" Content="Button"></Button>
-                    <Button Grid.Row="1" Content="Button"></Button>
-                    <Button Grid.Row="1" Grid.Column="1" Content="Button"></Button>
-                    <Button Grid.Row="2" Content="Button"></Button>
-                    <Button Grid.Row="2" Grid.Column="1" Content="Button"></Button>
-                    <Button Grid.Row="3" Content="Button"></Button>
-                    <Button Grid.Row="3" Grid.Column="1" Content="Button"></Button>
+                    <Grid HorizontalAlignment="Stretch" Grid.Column="1" Grid.Row="1" Panel.ZIndex="-1">
+                        <Grid.Background>
+                            <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
+                                <GradientStop Color="#FFFF3FEE" Offset="0" />
+                                <GradientStop Color="#FFFFB32D" Offset="1" />
+                            </LinearGradientBrush>
+                        </Grid.Background>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="50*" />
+                            <ColumnDefinition Width="50*" />
+                        </Grid.ColumnDefinitions>
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="25*" />
+                            <RowDefinition Height="25*" />
+                            <RowDefinition Height="25*" />
+                            <RowDefinition Height="25*" />
+                        </Grid.RowDefinitions>
+                        <Button Grid.Row="0" Content="Button"></Button>
+                        <Button Grid.Row="0" Grid.Column="1" Content="Button"></Button>
+                        <Button Grid.Row="1" Content="Button"></Button>
+                        <Button Grid.Row="1" Grid.Column="1" Content="Button"></Button>
+                        <Button Grid.Row="2" Content="Button"></Button>
+                        <Button Grid.Row="2" Grid.Column="1" Content="Button"></Button>
+                        <Button Grid.Row="3" Content="Button"></Button>
+                        <Button Grid.Row="3" Grid.Column="1" Content="Button"></Button>
+                    </Grid>
                 </Grid>
             </Grid>
         </Grid>
