--- a/Gestion AcademicoAdministrativa Abastos/Buttons.xaml
+++ b/Gestion AcademicoAdministrativa Abastos/Buttons.xaml
@@ -36,7 +36,7 @@
                         <RowDefinition Height="1*" />
                         <RowDefinition Height="1*" />
                     </Grid.RowDefinitions>
-                    <Button Grid.Row="0" Content="Home" Style="{StaticResource MenuButton}" Click="MenuButtons_Click"></Button>
+                    <Button x:Name="HomeButton" Grid.Row="0" Content="Home" Style="{StaticResource MenuButton}" Click="MenuButtons_Click"></Button>
                     <Button x:Name="FirstButton" Grid.Row="1" Content="Buscador Profesorado" Style="{StaticResource MenuButton}" Click="MenuButtons_Click"></Button>
                     <Button x:Name="SecondButton" Grid.Row="2" Content="Horario" Style="{StaticResource MenuButton}" Click="MenuButtons_Click"></Button>
                     <Button Grid.Row="3" Content="Button" Style="{StaticResource MenuButton}" Click="MenuButtons_Click"></Button>
