--- a/Gestion AcademicoAdministrativa Abastos/styles/DataGrid.xaml
+++ b/Gestion AcademicoAdministrativa Abastos/styles/DataGrid.xaml
@@ -13,6 +13,7 @@
         <Setter Property="BorderBrush" Value="{x:Null}" />
         <Setter Property="Background" Value="#33FFFFFF" />
         <Setter Property="Foreground" Value="#FFFFFFFF" />
+        <Setter Property="Height" Value="50" />
         <Setter Property="HorizontalContentAlignment" Value="Center" />
     </Style>
     <Style TargetType="{x:Type DataGridRowHeader}">
@@ -23,8 +24,7 @@
         <Setter Property="Foreground" Value="#FFB3B3B3" />
         <Setter Property="Background" Value="#33000000" />
         <Setter Property="Background" Value="Transparent" />
-        <Setter Property="Height" Value="25" />
-        <Setter Property="HorizontalContentAlignment" Value="Stretch" />
+        <Setter Property="Height" Value="40" />
         <Style.Triggers>
             <Trigger Property="IsSelected" Value="True">
                 <Setter Property="Foreground" Value="Wheat"/>
@@ -34,15 +34,18 @@
     <Style TargetType="{x:Type DataGridCell}">
         <Setter Property="BorderBrush" Value="{x:Null}" />
         <Setter Property="Background" Value="#FF262626" />
+        <Setter Property="BorderThickness" Value="0"/>
+        <!--Setter Property="TextBlock.VerticalAlignment" Value="Center" /-->
         <Style.Triggers>
             <Trigger Property="IsSelected" Value="True">
                 <Setter Property="Foreground" Value="Wheat"/>
-                <Setter Property="FontWeight" Value="Bold" />
+                <Setter Property="FontWeight" Value="DemiBold" />
             </Trigger>
         </Style.Triggers>
     </Style>
     <Style TargetType="{x:Type DataGridCellsPresenter}">
         <Setter Property="BorderBrush" Value="{x:Null}" />
+        <Setter Property="BorderThickness" Value="0"/>
         <Setter Property="Background" Value="Transparent" />
     </Style>
 </ResourceDictionary>
