--- a/Gestion AcademicoAdministrativa Abastos/styles/Overall.xaml
+++ b/Gestion AcademicoAdministrativa Abastos/styles/Overall.xaml
@@ -1,15 +1,9 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:local="clr-namespace:Posibles_Interfaces_de_Usuario.styles">
+                    xmlns:local="clr-namespace:Gestion_AcademicoAdministrativa_Abastos">
     <Style x:Key="SpecialTextControl" TargetType="{x:Type Control}">
         <Setter Property="Padding" Value="15, 0, 0, 0" />
         <Setter Property="VerticalContentAlignment" Value="Center" />
         <Setter Property="FontFamily" Value="Ubuntu" />
-    </Style>
-    <Style TargetType="{x:Type Window}">
-        <Setter Property="FontFamily"
-        Value="Comic Sans MS" />
-        <Setter Property="FontSize"
-        Value="14" />
     </Style>
 </ResourceDictionary>
