--- a/Gestion AcademicoAdministrativa Abastos/styles/Overall.xaml
+++ b/Gestion AcademicoAdministrativa Abastos/styles/Overall.xaml
@@ -5,5 +5,6 @@
         <Setter Property="Padding" Value="15, 0, 0, 0" />
         <Setter Property="VerticalContentAlignment" Value="Center" />
         <Setter Property="FontFamily" Value="Ubuntu" />
+        <Setter Property="FontSize" Value="15" />
     </Style>
 </ResourceDictionary>
