--- a/Gestion AcademicoAdministrativa Abastos/styles/Text.xaml
+++ b/Gestion AcademicoAdministrativa Abastos/styles/Text.xaml
@@ -10,7 +10,7 @@
     <ControlTemplate x:Key="TextBoxBaseControlTemplate" TargetType="{x:Type TextBoxBase}">
         <Border Background="{TemplateBinding Background}" 
                 x:Name="Bd" BorderBrush="Black"
-                BorderThickness="{TemplateBinding BorderThickness}" CornerRadius="10">
+                BorderThickness="{TemplateBinding BorderThickness}" CornerRadius="15,0,15,0">
             <ScrollViewer x:Name="PART_ContentHost"/>
         </Border>
         <ControlTemplate.Triggers>
@@ -26,7 +26,30 @@
             </Trigger>
         </ControlTemplate.Triggers>
     </ControlTemplate>
-    <Style TargetType="TextBox" BasedOn="{StaticResource SpecialTextControl}" />
-    <Style TargetType="PasswordBox" BasedOn="{StaticResource SpecialTextControl}" />
+    <Style TargetType="TextBox" BasedOn="{StaticResource SpecialTextControl}">
+        <Setter Property="Template" Value="{StaticResource TextBoxBaseControlTemplate}" />
+    </Style>
+    <ControlTemplate x:Key="passwordbox" TargetType="{x:Type PasswordBox}">
+        <Border Background="{TemplateBinding Background}" 
+        x:Name="Bd" BorderBrush="#FFE6DDDD"
+        BorderThickness="{TemplateBinding BorderThickness}" CornerRadius="15,0,15,0">
+            <ScrollViewer Name="PART_ContentHost" SnapsToDevicePixels="{TemplateBinding UIElement.SnapsToDevicePixels}" />
+        </Border>
+        <ControlTemplate.Triggers>
+            <Trigger Property="IsEnabled" Value="False">
+                <Setter Property="Background" Value="{DynamicResource {x:Static SystemColors.ControlBrushKey}}" TargetName="Bd"/>
+                <Setter Property="Foreground" Value="{DynamicResource {x:Static SystemColors.GrayTextBrushKey}}"/>
+            </Trigger>
+            <Trigger Property="Width" Value="Auto">
+                <Setter Property="MinWidth" Value="100"/>
+            </Trigger>
+            <Trigger Property="Height" Value="Auto">
+                <Setter Property="MinHeight" Value="20"/>
+            </Trigger>
+        </ControlTemplate.Triggers>
+    </ControlTemplate>
+    <Style TargetType="PasswordBox" BasedOn="{StaticResource SpecialTextControl}">
+        <Setter Property="Template" Value="{StaticResource passwordbox}" />
+    </Style>
 
 </ResourceDictionary>
