--- a/Gestion AcademicoAdministrativa Abastos/LogIn.xaml
+++ b/Gestion AcademicoAdministrativa Abastos/LogIn.xaml
@@ -121,12 +121,12 @@
                     <RowDefinition Height="5*" />
                     <RowDefinition Height="5*" />
                 </Grid.RowDefinitions>
-                <Label Grid.Column="1" Grid.Row="1" VerticalAlignment="Center" Content="usuario" FontFamily="Ubuntu" Background="{x:Null}" Foreground="White" FontSize="12"></Label>
+                <Label Grid.Column="1" Grid.Row="1" VerticalAlignment="Center" Content="usuario" Background="{x:Null}"></Label>
                 <TextBox VerticalContentAlignment="Center" x:Name="UsernameField" Grid.Column="1" Grid.Row="2"></TextBox>
-                <Label Grid.Column="1" Grid.Row="4" VerticalAlignment="Center" Content="contraseña" FontFamily="Ubuntu" Background="{x:Null}" Foreground="White" FontSize="12"></Label>
+                <Label Grid.Column="1" Grid.Row="4" VerticalAlignment="Center" Content="contraseña" Background="{x:Null}"></Label>
                 <PasswordBox VerticalContentAlignment="Center" x:Name="PasswordeField" Grid.Column="1" Grid.Row="5" FontFamily="ms-appx:///Assets/PassDot.ttf#PassDot" />
                 <Button x:Name="LogInButton" Content="Iniciar sesión" Grid.Column="1" Grid.Row="7" Click="LogInButton_Click" />
-                <Button x:Name="UrlLinker" Grid.Column="1" Grid.Row="8" Click="UrlLinker_Click" HorizontalAlignment="Center" VerticalAlignment="Center" Content="Clicame Gordo cabron!" FontFamily="Ubuntu" Foreground="White" FontSize="12">
+                <Button x:Name="UrlLinker" Grid.Column="1" Grid.Row="8" Click="UrlLinker_Click" HorizontalAlignment="Center" VerticalAlignment="Center" Content="Consultar Información">
                     <Button.Template>
                         <ControlTemplate TargetType="{x:Type Button}">
                             <ContentPresenter />
