--- a/Gestion AcademicoAdministrativa Abastos/styles/Button.xaml
+++ b/Gestion AcademicoAdministrativa Abastos/styles/Button.xaml
@@ -8,12 +8,14 @@
         <Setter Property="Foreground" Value="White" />
         <Setter Property="RenderTransformOrigin" Value="0.5,0.5" />
         <Setter Property="FontFamily" Value="Ubuntu" />
-        <Setter Property="BorderThickness" Value="0" />
+        <!--Setter Property="BorderThickness" Value="0" /-->
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="Button">
                     <Grid Background="{TemplateBinding Background}">
-                        <ContentPresenter Content="{TemplateBinding Content}" HorizontalAlignment="Center" VerticalAlignment="Center" />
+                        <Border x:Name="border" CornerRadius="0,15,0,15" BorderBrush="Transparent" BorderThickness="2" Background="{TemplateBinding Background}">
+                            <ContentPresenter Content="{TemplateBinding Content}" HorizontalAlignment="Center" VerticalAlignment="Center" />
+                        </Border>
                     </Grid>
                 </ControlTemplate>
             </Setter.Value>
@@ -33,6 +35,7 @@
                         </RadialGradientBrush>
                     </Setter.Value>
                 </Setter>
+                <Setter Property="Cursor" Value="Hand" />
                 <Setter Property="BorderThickness" Value="200" />
                 <Setter Property="BorderBrush" Value="Black" />
             </Trigger>
@@ -70,9 +73,9 @@
                     </Border>
                     <ControlTemplate.Triggers>
                         <Trigger Property="IsMouseOver" Value="True">
-                            <Setter TargetName="border" Property="BorderBrush" Value="#FF5A70FF" />
+                            <!--Setter TargetName="border" Property="BorderBrush" Value="#FF5A70FF" />
                             <Setter TargetName="border" Property="BorderThickness" Value="15,0,0,0" />
-                            <!--Setter TargetName="border" Property="Margin" Value="15,0,0,0" /-->
+                            <Setter TargetName="border" Property="Margin" Value="15,0,0,0" /-->
                         </Trigger>
                     </ControlTemplate.Triggers>
                 </ControlTemplate>
