--- a/Gestion AcademicoAdministrativa Abastos/MainWindow.xaml
+++ b/Gestion AcademicoAdministrativa Abastos/MainWindow.xaml
@@ -76,23 +76,72 @@
                             </LinearGradientBrush>
                         </Grid.Background>
                         <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="50*" />
-                            <ColumnDefinition Width="50*" />
+                            <ColumnDefinition Width="100*" />
                         </Grid.ColumnDefinitions>
                         <Grid.RowDefinitions>
-                            <RowDefinition Height="25*" />
-                            <RowDefinition Height="25*" />
-                            <RowDefinition Height="25*" />
-                            <RowDefinition Height="25*" />
+                            <RowDefinition Height="12*" />
+                            <RowDefinition Height="12*" />
+                            <RowDefinition Height="12*" />
+                            <RowDefinition Height="12*" />
+                            <RowDefinition Height="12*" />
+                            <RowDefinition Height="12*" />
+                            <RowDefinition Height="12*" />
+                            <RowDefinition Height="12*" />
                         </Grid.RowDefinitions>
-                        <Button Grid.Row="0" Content="Button"></Button>
-                        <Button Grid.Row="0" Grid.Column="1" Content="Button"></Button>
-                        <Button Grid.Row="1" Content="Button"></Button>
-                        <Button Grid.Row="1" Grid.Column="1" Content="Button"></Button>
-                        <Button Grid.Row="2" Content="Button"></Button>
-                        <Button Grid.Row="2" Grid.Column="1" Content="Button"></Button>
-                        <Button Grid.Row="3" Content="Button"></Button>
-                        <Button Grid.Row="3" Grid.Column="1" Content="Button"></Button>
+                        <Label Grid.Row="0" Content="Identificación"/>
+                        <Grid Grid.Row="1" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
+                            <Grid.RowDefinitions>
+                                <RowDefinition Height="25*" />
+                                <RowDefinition Height="75*" />
+                            </Grid.RowDefinitions>
+                            <Grid.ColumnDefinitions >
+                                <ColumnDefinition Width="41*" />
+                                <ColumnDefinition Width="7*" />
+                                <ColumnDefinition Width="41*" />
+                            </Grid.ColumnDefinitions>
+                            <Label Grid.Column="0" Content="DNI"/>
+                            <TextBox Grid.Column="0" Grid.Row="1" Text="" IsReadOnly="True" Margin="15"/>
+                            <Label Grid.Column="2" Content="NIF"/>
+                            <TextBox Grid.Column="2" Grid.Row="1" Text="" IsReadOnly="True" Margin="15"/>
+                        </Grid>
+                        <Label Grid.Row="2" Content="Personalización"/>
+                        <Grid Grid.Row="3" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
+                            <Grid.RowDefinitions>
+                                <RowDefinition Height="25*" />
+                                <RowDefinition Height="75*" />
+                            </Grid.RowDefinitions>
+                            <Grid.ColumnDefinitions >
+                                <ColumnDefinition Width="41*" />
+                                <ColumnDefinition Width="7*" />
+                                <ColumnDefinition Width="41*" />
+                            </Grid.ColumnDefinitions>
+                            <Label Grid.Column="0" Content="Nombre"/>
+                            <TextBox Grid.Column="0" Grid.Row="1" Text="" IsReadOnly="True" Margin="15"/>
+                            <Label Grid.Column="2" Content="Apellidos"/>
+                            <TextBox Grid.Column="2" Grid.Row="1" Text="" IsReadOnly="True" Margin="15"/>
+                        </Grid>
+                        <Label Grid.Row="4" Content="Datos de Contacto"/>
+                        <Grid Grid.Row="5" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
+                            <Grid.RowDefinitions>
+                                <RowDefinition Height="25*" />
+                                <RowDefinition Height="75*" />
+                            </Grid.RowDefinitions>
+                            <Grid.ColumnDefinitions >
+                                <ColumnDefinition Width="41*" />
+                                <ColumnDefinition Width="7*" />
+                                <ColumnDefinition Width="41*" />
+                            </Grid.ColumnDefinitions>
+                            <Label Grid.Column="0" Content="Email"/>
+                            <TextBox Grid.Column="0" Grid.Row="1" Text="" IsReadOnly="True" Margin="15"/>
+                            <Label Grid.Column="2" Content="Teléfono/s"/>
+                            <DataGrid Grid.Column="2" Grid.Row="1" IsReadOnly="True" Margin="15">
+                                
+                            </DataGrid>
+                        </Grid>
+                        <Label Grid.Row="6" Content="Datos especiales del Rol"/>
+                        <Grid Grid.Row="7" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
+
+                        </Grid>
                     </Grid>
                 </Grid>
             </Grid>
