--- a/Gestion AcademicoAdministrativa Abastos/MainWindow.xaml
+++ b/Gestion AcademicoAdministrativa Abastos/MainWindow.xaml
@@ -100,9 +100,9 @@
                                 <ColumnDefinition Width="41*" />
                             </Grid.ColumnDefinitions>
                             <Label Grid.Column="0" Content="DNI"/>
-                            <TextBox Grid.Column="0" Grid.Row="1" Text="" IsReadOnly="True" Margin="15"/>
+                            <TextBox Grid.Column="0" Grid.Row="1" Text="Lorem ipsum" IsReadOnly="True" Margin="15"/>
                             <Label Grid.Column="2" Content="NIF"/>
-                            <TextBox Grid.Column="2" Grid.Row="1" Text="" IsReadOnly="True" Margin="15"/>
+                            <TextBox Grid.Column="2" Grid.Row="1" Text="Lorem ipsum" IsReadOnly="True" Margin="15"/>
                         </Grid>
                         <Label Grid.Row="2" Content="Personalización"/>
                         <Grid Grid.Row="3" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
@@ -116,9 +116,9 @@
                                 <ColumnDefinition Width="41*" />
                             </Grid.ColumnDefinitions>
                             <Label Grid.Column="0" Content="Nombre"/>
-                            <TextBox Grid.Column="0" Grid.Row="1" Text="" IsReadOnly="True" Margin="15"/>
+                            <TextBox Grid.Column="0" Grid.Row="1" Text="Lorem ipsum" IsReadOnly="True" Margin="15"/>
                             <Label Grid.Column="2" Content="Apellidos"/>
-                            <TextBox Grid.Column="2" Grid.Row="1" Text="" IsReadOnly="True" Margin="15"/>
+                            <TextBox Grid.Column="2" Grid.Row="1" Text="Lorem ipsum" IsReadOnly="True" Margin="15"/>
                         </Grid>
                         <Label Grid.Row="4" Content="Datos de Contacto"/>
                         <Grid Grid.Row="5" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
@@ -132,7 +132,7 @@
                                 <ColumnDefinition Width="41*" />
                             </Grid.ColumnDefinitions>
                             <Label Grid.Column="0" Content="Email"/>
-                            <TextBox Grid.Column="0" Grid.Row="1" Text="" IsReadOnly="True" Margin="15"/>
+                            <TextBox Grid.Column="0" Grid.Row="1" Text="Lorem ipsum" IsReadOnly="True" Margin="15"/>
                             <Label Grid.Column="2" Content="Teléfono/s"/>
                             <DataGrid Grid.Column="2" Grid.Row="1" IsReadOnly="True" Margin="15">
                                 
