--- a/Gestion AcademicoAdministrativa Abastos/styles/DataGrid.xaml
+++ b/Gestion AcademicoAdministrativa Abastos/styles/DataGrid.xaml
@@ -13,7 +13,7 @@
         <Setter Property="BorderBrush" Value="{x:Null}" />
         <Setter Property="Background" Value="#33FFFFFF" />
         <Setter Property="Foreground" Value="#FFFFFFFF" />
-        <Setter Property="Height" Value="50" />
+        <!--Setter Property="Height" Value="50" /-->
         <Setter Property="HorizontalContentAlignment" Value="Center" />
     </Style>
     <Style TargetType="{x:Type DataGridRowHeader}">
@@ -24,7 +24,7 @@
         <Setter Property="Foreground" Value="#FFB3B3B3" />
         <Setter Property="Background" Value="#33000000" />
         <Setter Property="Background" Value="Transparent" />
-        <Setter Property="Height" Value="40" />
+        <!--Setter Property="Height" Value="40" /-->
         <Style.Triggers>
             <Trigger Property="IsSelected" Value="True">
                 <Setter Property="Foreground" Value="Wheat"/>
