Fix ComboBox Style

--- a/Gestion AcademicoAdministrativa Abastos/styles/Overall.xaml
+++ b/Gestion AcademicoAdministrativa Abastos/styles/Overall.xaml
@@ -6,5 +6,7 @@
         <Setter Property="VerticalContentAlignment" Value="Center" />
         <Setter Property="FontFamily" Value="Ubuntu" />
         <Setter Property="FontSize" Value="15" />
+        <Setter Property="VerticalContentAlignment" Value="Center"/>
+        <Setter Property="FontStretch" Value="Normal" />
     </Style>
 </ResourceDictionary>
