--- a/Gestion AcademicoAdministrativa Abastos/styles/Overall.xaml
+++ b/Gestion AcademicoAdministrativa Abastos/styles/Overall.xaml
@@ -1,6 +1,6 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:local="clr-namespace:Gestion AcademicoAdministrativa Abastos">
+                    xmlns:local="clr-namespace:Gestion_AcademicoAdministrativa_Abastos">
     <Style x:Key="SpecialTextControl" TargetType="{x:Type Control}">
         <Setter Property="Padding" Value="15, 0, 0, 0" />
         <Setter Property="VerticalContentAlignment" Value="Center" />
