--- a/Gestion_AcademicoAdministrativa_Abastos/Buttons.xaml
+++ b/Gestion_AcademicoAdministrativa_Abastos/Buttons.xaml
@@ -1,9 +1,9 @@
-﻿<Window x:Class="Gestion AcademicoAdministrativa Abastos.Buttons"
+﻿<Window x:Class="Gestion_AcademicoAdministrativa_Abastos.Buttons"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:Gestion AcademicoAdministrativa Abastos"
+        xmlns:local="clr-namespace:Gestion_AcademicoAdministrativa_Abastos"
         mc:Ignorable="d"
         Title="Buttons" Height="800" Width="250">
     <Grid>
