--- a/Gestion_AcademicoAdministrativa_Abastos/SplashScreen.xaml
+++ b/Gestion_AcademicoAdministrativa_Abastos/SplashScreen.xaml
@@ -1,9 +1,9 @@
-﻿<Window x:Class="Gestion AcademicoAdministrativa Abastos.SplashScreen"
+﻿<Window x:Class="Gestion_AcademicoAdministrativa_Abastos.SplashScreen"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:Gestion AcademicoAdministrativa Abastos"
+        xmlns:local="clr-namespace:Gestion_AcademicoAdministrativa_Abastos"
         WindowStartupLocation="CenterScreen"
         mc:Ignorable="d"
         Title="SplashScreen" Visibility="Visible" Background="Transparent"
